# midic

./: .gitignore  CMakeLists.txt  README.md  config.sample.yml  main.cpp  main_raster.cpp
.github/workflows/: cmake-multi-platform.yml
data/: example.raw
libs/: stb_image.h
src/: Effects.h  Midic.h  Util.h  main.cpp  main_midi.cpp  main_raster.cpp
src/lib/: Display.h  Effects.h  Midic.h  Util.h
